[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Opponent/Opponent.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ball/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level/Level.gd" type="Script" id=4]
[ext_resource path="res://assets/sprite__.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/score.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 640, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 360 )

[node name="Level" type="Node"]
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [ 720.0, 360.0 ]
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.129412, 0.14902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerScore" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.886275, 0.886275, 0.886275, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpponentScore" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.886275, 0.886275, 0.886275, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 640, 360 )
scale = Vector2( 0.75, 0.75 )

[node name="CountdownLabel" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 128.0
margin_bottom = 3.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Countdown"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 25, 360 )

[node name="WallTop" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallTop"]
position = Vector2( 640, -10 )
shape = SubResource( 4 )

[node name="WallBottom" type="StaticBody2D" parent="."]
position = Vector2( 0, 740 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallBottom"]
position = Vector2( 640, -10 )
shape = SubResource( 4 )

[node name="Opponent" parent="." instance=ExtResource( 2 )]
position = Vector2( 1255, 360 )

[node name="PlayerGoal" type="Area2D" parent="."]
position = Vector2( -8, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerGoal"]
position = Vector2( -3, 360 )
shape = SubResource( 5 )

[node name="OpponentGoal" type="Area2D" parent="."]
position = Vector2( 1294, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="OpponentGoal"]
position = Vector2( -3, 360 )
shape = SubResource( 5 )

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
[connection signal="body_entered" from="PlayerGoal" to="." method="_on_PlayerGoal_body_entered"]
[connection signal="body_entered" from="OpponentGoal" to="." method="_on_OpponentGoal_body_entered"]
